functioning testing added
