# routes/index.js
@@ -4,11 +4,11 @@ const router = express.Router();
 
 
 
-router.use('/',  require('./swagger'))
-router.use('/users',  auth.ensureAuth, require('./users'))
-router.use('/inventory',  auth.ensureAuth, require('./inventory'))
-router.use('/teams',  auth.ensureAuth, require('./teams'))
+router.use('/', require('./swagger'))
+router.use('/users', require('./users'))
+router.use('/inventory', auth.ensureAuth, require('./inventory'))
+router.use('/teams',  require('./teams'))
 router.use('/tasks',  auth.ensureAuth, require('./tasks'))
-router.use('/google', require('./google'))
+// router.use('/google', require('./google'))
 
 module.exports = router;
