# swagger-output.json
@@ -14,10 +14,9 @@
     "/api-docs": {
       "get": {
         "description": "",
-        "parameters": [],
         "responses": {
-          "200": {
-            "description": "OK"
+          "default": {
+            "description": ""
           }
         }
       }
@@ -25,16 +24,67 @@
     "/users/": {
       "get": {
         "description": "",
-        "produces": [
-          "application/json"
-        ],
-        "parameters": [],
         "responses": {
           "200": {
             "description": "OK"
-          },
-          "400": {
-            "description": "Bad Request"
+          }
+        }
+      },
+      "post": {
+        "description": "",
+        "parameters": [
+          {
+            "name": "body",
+            "in": "body",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "firstName": {
+                  "example": "any"
+                },
+                "lastName": {
+                  "example": "any"
+                },
+                "email": {
+                  "example": "any"
+                },
+                "phoneNumber": {
+                  "example": "any"
+                },
+                "birthday": {
+                  "example": "any"
+                },
+                "address": {
+                  "example": "any"
+                },
+                "interest": {
+                  "example": "any"
+                },
+                "jobTitle": {
+                  "example": "any"
+                },
+                "responsibilities": {
+                  "example": "any"
+                },
+                "education": {
+                  "example": "any"
+                },
+                "expertise": {
+                  "example": "any"
+                },
+                "skills": {
+                  "example": "any"
+                },
+                "salary": {
+                  "example": "any"
+                }
+              }
+            }
+          }
+        ],
+        "responses": {
+          "201": {
+            "description": "Created"
           }
         }
       }
@@ -78,52 +128,49 @@
               "type": "object",
               "properties": {
                 "firstName": {
-                  "example": "string"
+                  "example": "any"
                 },
                 "lastName": {
-                  "example": "string"
+                  "example": "any"
                 },
                 "email": {
-                  "example": "email"
+                  "example": "any"
                 },
                 "phoneNumber": {
-                  "example": "integer"
+                  "example": "any"
                 },
                 "birthday": {
-                  "example": "date"
+                  "example": "any"
                 },
                 "address": {
-                  "example": "string"
+                  "example": "any"
                 },
                 "interest": {
-                  "example": "string"
+                  "example": "any"
                 },
                 "jobTitle": {
-                  "example": "string"
+                  "example": "any"
                 },
                 "responsibilities": {
-                  "example": "string"
+                  "example": "any"
                 },
                 "education": {
-                  "example": "string"
+                  "example": "any"
                 },
                 "expertise": {
-                  "example": "string"
+                  "example": "any"
                 },
                 "skills": {
-                  "example": "string"
+                  "example": "any"
                 },
                 "salary": {
-                  "example": "integer"
+                  "example": "any"
                 }
               }
             }
           }
         ],
         "responses": {
-          "200": {
-            "description": "OK"
-          },
           "204": {
             "description": "No Content"
           },
@@ -164,7 +211,6 @@
         "produces": [
           "application/json"
         ],
-        "parameters": [],
         "responses": {
           "200": {
             "description": "OK"
@@ -184,37 +230,40 @@
               "type": "object",
               "properties": {
                 "productCategory": {
-                  "example": "string"
+                  "example": "any"
                 },
                 "productName": {
-                  "example": "string"
+                  "example": "any"
                 },
                 "productDescription": {
-                  "example": "string"
+                  "example": "any"
                 },
                 "brand": {
-                  "example": "string"
+                  "example": "any"
                 },
                 "countryOrigin": {
-                  "example": "string"
+                  "example": "any"
                 },
                 "productWidth": {
-                  "example": "integer"
+                  "example": "any"
                 },
                 "productHeight": {
-                  "example": "integer"
+                  "example": "any"
                 },
                 "productVolume": {
-                  "example": "integer"
+                  "example": "any"
                 },
                 "productWeight": {
-                  "example": "integer"
+                  "example": "any"
                 },
                 "packType": {
-                  "example": "string"
+                  "example": "any"
                 },
                 "expiryDate": {
-                  "example": "date"
+                  "example": "any"
+                },
+                "dateCreation": {
+                  "example": "any"
                 }
               }
             }
@@ -275,40 +324,40 @@
               "type": "object",
               "properties": {
                 "productCategory": {
-                  "example": "string"
+                  "example": "any"
                 },
                 "productName": {
-                  "example": "string"
+                  "example": "any"
                 },
                 "productDescription": {
-                  "example": "string"
+                  "example": "any"
                 },
                 "brand": {
-                  "example": "string"
+                  "example": "any"
                 },
                 "countryOrigin": {
-                  "example": "string"
+                  "example": "any"
                 },
                 "productWidth": {
-                  "example": "integer"
+                  "example": "any"
                 },
                 "productHeight": {
-                  "example": "integer"
+                  "example": "any"
                 },
                 "productVolume": {
-                  "example": "integer"
+                  "example": "any"
                 },
                 "productWeight": {
-                  "example": "integer"
+                  "example": "any"
                 },
                 "packType": {
-                  "example": "string"
+                  "example": "any"
                 },
                 "expiryDate": {
-                  "example": "date"
+                  "example": "any"
                 },
                 "dateCreation": {
-                  "example": "date"
+                  "example": "any"
                 }
               }
             }
@@ -355,16 +404,9 @@
     "/teams/": {
       "get": {
         "description": "",
-        "produces": [
-          "application/json"
-        ],
-        "parameters": [],
         "responses": {
           "200": {
             "description": "OK"
-          },
-          "400": {
-            "description": "Bad Request"
           }
         }
       },
@@ -378,22 +420,22 @@
               "type": "object",
               "properties": {
                 "teamName": {
-                  "example": "string"
-                },
-                "oid": {
                   "example": "any"
                 },
-                "iod": {
+                "teamLeader": {
+                  "example": "any"
+                },
+                "teamMembers": {
                   "example": "any"
                 },
                 "teamProfile": {
-                  "example": "string"
+                  "example": "any"
                 },
                 "taskId": {
                   "example": "any"
                 },
                 "dateCreated": {
-                  "example": "date"
+                  "example": "any"
                 }
               }
             }
@@ -408,9 +450,6 @@
           },
           "400": {
             "description": "Bad Request"
-          },
-          "500": {
-            "description": "Internal Server Error"
           }
         }
       }
@@ -454,7 +493,7 @@
               "type": "object",
               "properties": {
                 "teamName": {
-                  "example": "string"
+                  "example": "any"
                 },
                 "oid": {
                   "example": "any"
@@ -469,7 +508,7 @@
                   "example": "any"
                 },
                 "dateCreated": {
-                  "example": "date"
+                  "example": "any"
                 }
               }
             }
@@ -519,7 +558,6 @@
         "produces": [
           "application/json"
         ],
-        "parameters": [],
         "responses": {
           "200": {
             "description": "OK"
@@ -539,25 +577,25 @@
               "type": "object",
               "properties": {
                 "taskName": {
-                  "example": "string"
+                  "example": "any"
                 },
                 "taskInitiator": {
-                  "example": "string"
+                  "example": "any"
                 },
                 "taskStartDate": {
-                  "example": "date"
+                  "example": "any"
                 },
                 "responsiblePerson": {
-                  "example": "string"
+                  "example": "any"
                 },
                 "taskDeadline": {
-                  "example": "date"
+                  "example": "any"
                 },
                 "taskOutcome": {
-                  "example": "string"
+                  "example": "any"
                 },
                 "assignedtask": {
-                  "example": "string"
+                  "example": "any"
                 }
               }
             }
@@ -618,25 +656,25 @@
               "type": "object",
               "properties": {
                 "taskName": {
-                  "example": "string"
+                  "example": "any"
                 },
                 "taskInitiator": {
-                  "example": "string"
+                  "example": "any"
                 },
                 "taskStartDate": {
-                  "example": "date"
+                  "example": "any"
                 },
                 "responsiblePerson": {
-                  "example": "string"
+                  "example": "any"
                 },
                 "taskDeadline": {
-                  "example": "date"
+                  "example": "any"
                 },
                 "taskOutcome": {
-                  "example": "string"
+                  "example": "any"
                 },
                 "assignedtask": {
-                  "example": "string"
+                  "example": "any"
                 }
               }
             }
@@ -676,50 +714,6 @@
           },
           "500": {
             "description": "Internal Server Error"
-          }
-        }
-      }
-    },
-    "/google/": {
-      "get": {
-        "description": "",
-        "parameters": [],
-        "responses": {
-          "200": {
-            "description": "OK"
-          }
-        }
-      }
-    },
-    "/google/callback": {
-      "get": {
-        "description": "",
-        "parameters": [],
-        "responses": {
-          "200": {
-            "description": "OK"
-          }
-        }
-      }
-    },
-    "/google/login": {
-      "get": {
-        "description": "",
-        "parameters": [],
-        "responses": {
-          "200": {
-            "description": "OK"
-          }
-        }
-      }
-    },
-    "/google/logout": {
-      "get": {
-        "description": "",
-        "parameters": [],
-        "responses": {
-          "200": {
-            "description": "OK"
           }
         }
       }
